Fix a dark mode contrast issue

--- a/www/public/repl/repl.css
+++ b/www/public/repl/repl.css
@@ -133,7 +133,15 @@ li {
 }
 
 .color-white {
-  color: white;
+  /* Really this isn't white so much as "default text color." For the repl, this should be black
+  in a light color scheme, and only white in dark mode. The name could be better! */
+  color: black;
+}
+
+@media (prefers-color-scheme: dark) {
+  .color-white {
+    color: white;
+  }
 }
 
 .bold {
